# yoloflaskdemo

./: pyproject.toml
app/: __main__.py  codes.py
templates/: index.html  predict.html
